; ModuleID = '/home/carl/AnghaBench/streem/src/extr_string.c_strm_str_intern_p.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_string.c_strm_str_intern_p.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @strm_str_intern_p(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @strm_value_tag(i32 %4)
  switch i32 %5, label %9 [
    i32 129, label %6
    i32 131, label %6
    i32 130, label %6
    i32 128, label %8
  ]

6:                                                ; preds = %1, %1, %1
  %7 = load i32, i32* @TRUE, align 4
  store i32 %7, i32* %2, align 4
  br label %11

8:                                                ; preds = %1
  br label %9

9:                                                ; preds = %1, %8
  %10 = load i32, i32* @FALSE, align 4
  store i32 %10, i32* %2, align 4
  br label %11

11:                                               ; preds = %9, %6
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}

declare dso_local i32 @strm_value_tag(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
